small refactor recentSearch